--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
+
 img {
     max-width: 150px;
     max-height: 150px;
@@ -40,7 +45,11 @@ body {
     list-style: none;
     display: flex;
     gap: 16px;
+}
 
+.header ul li a{
+    text-decoration: none;
+    color: white;
 }
 
 .header p {
@@ -183,13 +192,18 @@ h2 {
     flex-direction: column;
     color: white;
     font-size: 18px;
-    
+    font-weight: lighter;
+}
+
+h4 {
+    font-size: 26px;
+    font-weight: bold;
 }
 
 .content button{
     background-color: #3882f6;
     color: white;
-    align-self: flex-end;
+    align-self: center;
     width: 100px;
     height: 30px;
     border-radius: 8px;
